--- a/src/assets/components/home/home.css
+++ b/src/assets/components/home/home.css
@@ -6,12 +6,15 @@ body, html {
   .container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-between;
     padding: 20px;
     gap: 20px;
   }
-  
+  .col-md-4 {
+    flex: 1 1 calc(33.333% - 20px); 
+    box-sizing: border-box;
+    margin-bottom: 20px;
+  }
   
   .card {
     width: 100%;
