--- a/src/assets/components/navbar/navbar.css
+++ b/src/assets/components/navbar/navbar.css
@@ -3,7 +3,10 @@
     padding: 1rem;
 
   }
-  
+  .active {
+    color: darkgreen;
+    font-weight: bold;
+    }
   .navbar-brand {
     color: #fff !important;
     font-size: 30px;
